推送方式增加serverChan_turbo

--- a/config.ini
+++ b/config.ini
@@ -13,3 +13,10 @@ end_time = 23:59
 enable = true
 # Server酱推送服务，推送必须填入 serverChan_SCKEY，如何获取请参考 http://sc.ftqq.com/3.version
 serverChan_SCKEY = your_sckey
+
+
+[push_serverChan_turbo]
+# 是否启用 true/false
+enable = false
+# Server酱_Turbo推送服务，推送必须填入 serverChan_SendKey，如何获取请参考 https://sct.ftqq.com/
+serverChan_SendKey = your_sendKey
