--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # up主uid列表，使用英文逗号分隔
 uid_list = 672328094,672346917,672353429,672342685,351609538,703007996
 # 扫描间隔描述，不建议设置太频繁
-intervals_second = 60
+intervals_second = 30
 # 扫描起止时间，24小时制(目前不支持跨日期)，例：07:00、23:59
 begin_time = 07:00
 end_time = 23:59
@@ -10,13 +10,24 @@ end_time = 23:59
 
 [push_serverChan]
 # 是否启用 true/false
-enable = true
-# Server酱推送服务，推送必须填入 serverChan_SCKEY，如何获取请参考 http://sc.ftqq.com/3.version
-serverChan_SCKEY = your_sckey
+enable = false
+# Server酱推送服务，如果启用该推送，必须填入 serverChan_SCKEY，如何获取请参考 http://sc.ftqq.com/3.version
+serverChan_SCKEY =
 
 
 [push_serverChan_turbo]
 # 是否启用 true/false
 enable = false
-# Server酱_Turbo推送服务，推送必须填入 serverChan_SendKey，如何获取请参考 https://sct.ftqq.com/
-serverChan_SendKey = your_sendKey
+# Server酱_Turbo推送服务，如果启用该推送，必须填入 serverChan_SendKey，如何获取请参考 https://sct.ftqq.com
+serverChan_SendKey =
+
+
+[push_wechat]
+# 是否启用 true/false
+enable = false
+# 企业id，如果启动该推送则必填
+corp_id =
+# 应用id，如果启动该推送则必填
+agent_id =
+# 应用Secret，如果启动该推送则必填
+corp_secret =
