增加对b站直播开播的提醒

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,8 @@
 [config]
+# 是否启用动态推送 true/false
+enable_dynamic_push = true
+# 是否启用开播推送 true/false
+enable_living_push = true
 # up主uid列表，使用英文逗号分隔
 uid_list = 672328094,672346917,672353429,672342685,351609538,703007996
 # 扫描间隔描述，不建议设置太频繁
