feat: proxy pool & add request header
1. add proxy pool configuration
2. add request header to request

--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,13 @@ begin_time = 07:00
 end_time = 23:59
 
 
+[proxy_pool]
+# 是否启用 true/false
+enable = false
+# ip池地址，参考：https://github.com/jhao104/proxy_pool
+proxy_pool_url = http://ip:port
+
+
 [push_serverChan]
 # 是否启用 true/false
 enable = false
