docs: fix typos

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ enable_dynamic_push = true
 enable_living_push = true
 # up主uid列表，使用英文逗号分隔
 uid_list = 672328094,672346917,672353429,672342685,351609538,703007996
-# 扫描间隔描述，不建议设置太频繁
+# 扫描间隔秒数，不建议设置太频繁
 intervals_second = 60
 # 扫描起止时间，24小时制(目前不支持跨日期)，例：07:00、23:59
 begin_time = 07:00
@@ -15,7 +15,7 @@ end_time = 23:59
 [proxy_pool]
 # 是否启用 true/false
 enable = false
-# ip池地址，参考：https://github.com/jhao104/proxy_pool
+# ip池地址，参考 https://github.com/jhao104/proxy_pool
 proxy_pool_url = http://ip:port
 
 
